--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 col-xs-6">
+				<!-- <div class="col-md-4 col-xs-6">
 					<div class="footer">
 						<h3 class="footer-title">Categories</h3>
 						<ul class="footer-links" id="footer_cat">
@@ -54,7 +54,21 @@
 						</ul>
 					</div>
 				</div>
+ -->
+ <div class="col-md-4 col-xs-6">
+	<div class="newsletter">
+		<p>Suivi Nous</p>
+		<ul class="newsletter-follow">
+			<li>
+				<a href="https://www.facebook.com/literiedamour"><i class="fa fa-facebook"></i></a>
+			</li>
+			<li>
+				<a href="https://www.instagram.com/literie_damour/"><i class="fa fa-instagram"></i></a>
+			</li>
 
+		</ul>
+	</div>
+ </div>
 			</div>
 			<!-- /row -->
 		</div>
