--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -100,7 +100,7 @@
 												</div>
 											</div>
 											<div class="add-to-cart">
-												<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= product_top[i].product_id %>'"><i class="fa fa-shopping-cart"></i> Commander</button>
+												<button class="add-to-cart-btn btn-ToCheckout" idp = "<%= product_top[i].product_id %>"><i class="fa fa-shopping-cart"></i> Commander</button>
 											</div>
 										</div>
 										<!-- /product -->
@@ -198,7 +198,7 @@
 														</div>
 													</div>
 													<div class="add-to-cart">
-														<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= sub_category[i].products[j].product_id %>'"><i class="fa fa-shopping-cart"></i> Commander</button>
+														<button class="add-to-cart-btn btn-ToCheckout" idp = "<%= sub_category[i].products[j].product_id %>"><i class="fa fa-shopping-cart"></i> Commander</button>
 													</div>
 												</div>
 											</div>
