--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -190,7 +190,7 @@
 												</div>
 										</div>
 										<div class="add-to-cart">
-											<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= products[i].product_id %>'"><i class="fa fa-shopping-cart"></i> Commander</button>
+											<button class="add-to-cart-btn btn-ToCheckout" idp = "<%= products[i].product_id %>"><i class="fa fa-shopping-cart"></i> Commander</button>
 										</div>
 									</div>
 								</div>
