--- a/generateApp/admin_app/views/invoice.ejs
+++ b/generateApp/admin_app/views/invoice.ejs
@@ -159,11 +159,9 @@
         </div>
         
       </div>
-      <div class=" footer_a4">
-        <!-- Information on technical characteristics, the delivery set, the
-        country of manufacture and the appearance of the goods is for
-        reference only and is based on the latest information available
-        at the time of publication. -->
+      <div class=" footer_a4 d-flex justify-content-between">
+        <h4>Signature Fournisseur</h4>
+        <h4>Signature Client</h4>
       </div>
     </div>
   </div>
