--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -9,10 +9,10 @@
 					<p>Suivi Nous</p>
 					<ul class="newsletter-follow">
 						<li>
-							<a href="https://www.facebook.com/literiedamour"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/literiedamour" target="_blank"><i class="fa fa-facebook"></i></a>
 						</li>
 						<li>
-							<a href="https://www.instagram.com/literie_damour/"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.instagram.com/literie_damour/" target="_blank"><i class="fa fa-instagram"></i></a>
 						</li>
 
 					</ul>
@@ -60,10 +60,10 @@
 		<p>Suivi Nous</p>
 		<ul class="newsletter-follow">
 			<li>
-				<a href="https://www.facebook.com/literiedamour"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.facebook.com/literiedamour" target="_blank"><i class="fa fa-facebook"></i></a>
 			</li>
 			<li>
-				<a href="https://www.instagram.com/literie_damour/"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.instagram.com/literie_damour/" target="_blank"><i class="fa fa-instagram"></i></a>
 			</li>
 
 		</ul>
