--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -124,8 +124,8 @@
 
 						<ul class="product-links">
 							<li>Suivez-nous :</li>
-							<li><a href="https://www.facebook.com/literiedamour"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://www.instagram.com/literie_damour/"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/literiedamour" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/literie_damour/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 							<!-- <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i></a></li> -->
 						</ul>
