--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include ("layout/header") %>
 
 <!-- HOT DEAL SECTION -->
-<div id="hot-deal" class="section" style="background: url('./img/banner/main.jpg') center no-repeat">
+<div id="hot-deal" class="section slidemob" style="background-image: url('./img/banner/main.jpg') ; background-size: cover;">
 	<!-- container -->
 	<div class="container-fluid">
 		<!-- row -->
@@ -75,7 +75,7 @@
 								<div class="product" style="border-radius: 50px;">
 									<div class="product-img" style="border-radius: 50px;">
 										<img src="/img/product/<%= product_top[i].product_id %>/main.jpg" alt=""
-											style="max-height: 320px; border-radius: 50px; ">
+											style="height: 320px; border-radius: 50px; ">
 										<div class="product-label">
 											<!-- 	<span class="sale">-30%</span> -->
 											<span class="new">NEW</span>
@@ -141,7 +141,7 @@
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title" style="background-color: #223f3a; border-radius: 50px;">
-					<h3 class="title" style="padding: 1%;  margin-bottom: 0; color: #fff; margin-left: 15px;">Nos Produits</h3>
+					<a href="/products/list/1"><h3 class="title" style="padding: 1%;  margin-bottom: 0; color: #fff; margin-left: 15px;">Nos Produits</h3></a>
 
 				</div>
 				<div class="section-nav">
@@ -175,11 +175,11 @@
 										<% for (var j = 0; j < sub_category[i].products.length; j++) { %>
 
 										<!-- product -->
-										<div class="col-md-3 col-xs-6 col-3 col-lg-3">
+										<div class="col-md-3 col-xs-6 col-3 col-lg-4">
 											<div class="product">
 												<div class="product-img text-center">
 													<img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
-														alt="" style=" height: 250px; padding: 5px;">
+														alt="" style=" height: 200px; padding: 5px; width: 80%;">
 													<!-- <div class="product-label">
 											<span class="sale">-30%</span>
 											<span class="new">NEW</span>
@@ -232,23 +232,23 @@
 									<div class="col-4 col-lg-4 col-sm-4 col-md-4 col-xs-12">
 										<div class="product">
 											<div class="product-img text-center">
-												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%;"
+												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 480px;"
 													alt="video" autoplay muted></video>
 											</div>
 										</div>
 										<div class="product">
 											<div class="product-img text-center">
-												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%;"
+												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 480px;"
 													alt="video" autoplay muted></video>
 											</div>
 										</div>
 									
-									<div class="product">
+									<!-- <div class="product">
 										<div class="product-img text-center">
-											<video src="./img/video/3.mp4" style="width: 100%;padding: 1%;"
+											<video src="./img/video/3.mp4" style="width: 100%;padding: 1%; max-width: 480px;"
 												alt="video" autoplay muted></video>
 										</div>
-									</div>
+									</div> -->
 
 								</div>
 
