--- a/generateApp/client_app/views/checkout.ejs
+++ b/generateApp/client_app/views/checkout.ejs
@@ -47,9 +47,9 @@
 							<input class="input" type="tel" name="phone" placeholder="Téléphone*" <% if (user.length > 0) {%> value="<%= user[0].user_phone %>" <%}%> required>
 						</div>
 
-						<div class="form-group">
-							<input class="input" type="text" name="address" placeholder="Adresse*" <% if (user.length > 0) {%> value="<%= user[0].user_address %>" <%}%> required>
-						</div>
+						<!-- <div class="form-group">
+							<input class="input" type="text" name="address" placeholder="Adresse*" <% if (user.length > 0) {%> value="<%= user[0].user_address %>" <%}%> >
+						</div> -->
 						<div class="form-group">
 							<select class="selectpicker form-control border-0 mb-1 px-4  rounded shadow" id="wilaya_checkout" name="wilaya" required>
 								<% if (typeof(wilaya) !== 'undefined' && wilaya != null && wilaya.length > 0) {
@@ -67,9 +67,9 @@
 								<% }} %>
 							</select>
 						</div>
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<input class="input" type="email" name="email" placeholder="Email" <% if (user.length > 0) {%> value="<%= user[0].user_email %>" <%}%> >
-						</div>
+						</div> -->
 					</div>
 					<!-- /Billing Details -->
 					<% if (!session.privid) { %>
