--- a/generateApp/client_app/views/cart.ejs
+++ b/generateApp/client_app/views/cart.ejs
@@ -25,7 +25,7 @@
                                 <div class="col-md-2 col-xs-12 text-center"><img class="img-responsive" src="/img/product/<%= cart_p[i].product_id %>/main.jpg" width="80">
                                 </div>
                                 <div class="col-md-4 col-xs-12">
-                                    <h4 class="product-name"><strong><%= cart_p[i].product_name %></strong></h4><h4><small><%= cart_p[i].product_desig %></small></h4>
+                                    <h4 class="product-name"><strong><%= cart_p[i].product_name %></strong></h4>
                                 </div>
                                 <div class="col-md-6" style="display: flex; justify-content: space-between;">
                                     <div class="col-md-8 col-xs-8 text-right">
