--- a/generateApp/client_app/views/order_details.ejs
+++ b/generateApp/client_app/views/order_details.ejs
@@ -49,9 +49,9 @@
                                     <h4 class="product-name">
                                         <strong><%= order_p[i].product_name %></strong>
                                     </h4>
-                                    <h4>
-                                        <small><%= order_p[i].product_desig %></small>
-                                    </h4>
+                               <!--      <h4>
+                                        <small><%- order_p[i].product_desig.replaceAll("\r\n","<br>") %></small>
+                                    </h4> -->
                                 </div>
                                 <div class="col-md-6" style="display: flex; justify-content: space-between;">
                                     <div class="col-md-6 col-xs-8">
