--- a/generateApp/client_app/public/assets/css/style.css
+++ b/generateApp/client_app/public/assets/css/style.css
@@ -2177,9 +2177,9 @@ textarea.input {
 }
 
 @media only screen and (max-width: 480px) {
-  [class*='col-xs'] {
+ /*  [class*='col-xs'] {
     width: 100%;
-  }
+  } */
   .store-grid {
     float: none;
     margin-top: 10px;
@@ -2192,6 +2192,51 @@ textarea.input {
   {
     display: none;
   }
+  .text-mobile
+  {
+    font-size: xx-small;
+  }
+  .product .add-to-cart .add-to-cart-btn {
+
+    width: 100% !important;
+    padding: 0 !important;
+  }
+
+  .product .add-to-cart .add-to-cart-btn>i {
+    display: none !important;
+  }
+
+  .product .add-to-cart .add-to-cart-btn:hover>i {
+    display: none !important;
+  }
+.img-mobile
+{
+  height: 100px !important;
+  padding-top: 2px !important;
+}
+.product {
+
+  padding: 0px 0px !important;
+ 
+}
+.video-mobile {
+height: 50% !important;
+width: 80% !important;
+}
+.mobile-col
+{
+  padding: 2px !important;
+}
+.title
+{
+  font-size: 15px;
+  padding: 5% !important;
+}
+.img-mobile-prod
+{
+  height: 150px  !important;
+  width: 100% !important;
+}
 }
 
 
