--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -137,7 +137,14 @@
 		<!-- row -->
 		<% if (typeof(sub_category) !== 'undefined' && sub_category != null && sub_category.length > 0) { %>
 		<div class="row">
-
+			<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
+				<div class=" col-12 mobile-col">
+					<div class="product-img text-center ">
+						<video src="./img/video/1.mp4" style="width: 90%;padding: 1%; max-width: 480px;" class="display-none video-mobile"
+							alt="video" autoplay muted></video>
+					</div>
+				</div>
+			</div>
 			<!-- section title -->
 			<div class="col-md-12">
 				<div class="section-title" style="background-color: #223f3a; border-radius: 50px;">
@@ -161,6 +168,7 @@
 			<!-- Products tab & slick -->
 			<div class="col-md-12">
 				<div class="row">
+					
 					<div class="products-tabs">
 						<!-- tab -->
 						<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"}  %>
@@ -169,17 +177,17 @@
 
 								<!-- store products -->
 								<div class="row">
-
-									<div class="col-8 col-md-8 col-sm-8 col-lg-8 col-xs-12">
+									
+									<div class="col-8 col-sm-8 col-lg-8 col-xs-12 mobile-col">
 										<!-- product -->
 										<% for (var j = 0; j < sub_category[i].products.length; j++) { %>
 
 										<!-- product -->
-										<div class="col-md-3 col-xs-6 col-3 col-lg-4">
+										<div class="col-xs-6 col-3 col-lg-4 col-sm-6 mobile-col">
 											<div class="product">
 												<div class="product-img text-center">
-													<img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
-														alt="" style=" height: 200px; padding: 5px; width: 80%;">
+													<a href="/product/<%= sub_category[i].products[j].product_id %>/details"><img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
+														alt="" style=" height: 200px; padding: 0px; width: 90%;" class="img-mobile"></a>
 													<!-- <div class="product-label">
 											<span class="sale">-30%</span>
 											<span class="new">NEW</span>
@@ -220,7 +228,7 @@
 												<div class="add-to-cart">
 													<button class="add-to-cart-btn btn-ToCheckout" 
 													idp = "<%= sub_category[i].products[j].product_id %>"><i
-													class="fa fa-shopping-cart"></i> Commander</button>
+													class="fa fa-shopping-cart mobile-none"></i> <span class="text-mobile"> Commander</span> </button>
 												</div>
 											</div>
 										</div>
@@ -229,16 +237,16 @@
 									</div>
 
 
-									<div class="col-4 col-lg-4 col-sm-4 col-md-4 col-xs-12">
-										<div class="product">
-											<div class="product-img text-center">
-												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 480px;"
+									<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
+										<div class=" col-12 mobile-col">
+											<div class="product-img text-center ">
+												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="mobile-none video-mobile"
 													alt="video" autoplay muted></video>
 											</div>
 										</div>
-										<div class="product">
+										<div class=" col-12 mobile-col" >
 											<div class="product-img text-center">
-												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 480px;"
+												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="video-mobile"
 													alt="video" autoplay muted></video>
 											</div>
 										</div>
