--- a/generateApp/client_app/views/layout/modal.ejs
+++ b/generateApp/client_app/views/layout/modal.ejs
@@ -22,9 +22,9 @@
         <img alt="Ecom" src="/assets/img/logo.png" width="100">
         <p style="width: 100%; text-align: center; margin: 10px 0px; color: white;">Un nouveau produit a été ajouté à votre panier.</p>
       </div>
-      <div class="modal-footer">
-        <button class="btn btn-light" onclick="location.href='/cart'" >Voir panier</button>
-        <button type="button" class="btn btn-warning mb-2" data-dismiss="modal">Continuer mes achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+      <div class="modal-footer" style="flex: content; justify-content: space-between;">
+        <button class="btn btn-light" onclick="location.href='/cart'"  style="margin-bottom: 5px;">Voir panier</button>
+        <button type="button" style="margin-bottom: 5px;" class="btn btn-warning mb-2" data-dismiss="modal">Continuer mes achats &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
