--- a/generateApp/admin_app/views/order_details.ejs
+++ b/generateApp/admin_app/views/order_details.ejs
@@ -80,7 +80,7 @@
                                     </tbody>
                                     <tbody class="sa-table__group">
                                         <tr>
-                                            <td colSpan="3">Livraison</td>
+                                            <td colSpan="3">Livraison ( <%= order[0].delivery_type_name %> )</td>
                                             <td class="text-end">
                                                 <div class="sa-price"><span class="sa-price__integer"><%= formating.format(order[0].delivery_price)+" DA" %></span></div>
                                             </td>
