--- a/generateApp/client_app/views/order_details.ejs
+++ b/generateApp/client_app/views/order_details.ejs
@@ -89,7 +89,7 @@
                                 </strong></span>
                         </div>
                         <div class="col-md-12" style="margin: 5px 0px;">
-                            <span class="text-left">Livraison : <strong>
+                            <span class="text-left">Livraison ( <%= order[0].delivery_type_name %> ) : <strong>
                                     <%= formating.format(order[0].delivery_price)+" DA" %>
                                 </strong></span>
                         </div>
