--- a/generateApp/client_app/views/cart.ejs
+++ b/generateApp/client_app/views/cart.ejs
@@ -24,13 +24,8 @@
                             <div class="row">
                                 <div class="col-md-2 col-xs-4 text-center"><img class="img-responsive" src="/img/product/<%= cart_p[i].product_id %>/main.jpg" width="80">
                                 </div>
-<<<<<<< HEAD
-                                <div class="col-md-4 col-xs-8">
-                                    <h4 class="product-name"><strong><%= cart_p[i].product_name %></strong></h4><h4 class="mobile-none"><small><%= cart_p[i].product_desig %></small></h4>
-=======
                                 <div class="col-md-4 col-xs-12">
                                     <h4 class="product-name"><strong><%= cart_p[i].product_name %></strong></h4>
->>>>>>> 99764137081bc1f798499a259186c164c4aa0ec6
                                 </div>
                                 <div class="col-md-6 col-xs-12" style="display: flex; justify-content: space-between; margin-top: 5px;">
                                     <div class="col-md-8 col-xs-6 text-right" style="padding-top: 2% ;">
@@ -64,17 +59,25 @@
                         <% if (cart[0].productCount > 0) { %>
 
                             <div class="panel-footer">
-                                <div class="row text-center">
-                                    <div class="col-md-9 myTotalCart">
-                                        <h4 class="text-right">Total : <strong> 
-                                            <% let formating=Intl.NumberFormat('en-US') %>
-                                            <%= formating.format(cart[0].totalPrice)+" DA" %>
-                                        </strong></h4>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <select class="selectpicker form-control border-0 mb-1 px-4 rounded shadow deliveryType" name="delivery_type" required>
+                                            <option value="1">A domicile</option>
+                                            <option value="2">Point de relais</option>
+                                        </select>
                                     </div>
-                                    <div class="col-md-3">
-                                        <button type="button" class="btn btn-success btn-block myBtnValid">
-                                            Valider
-                                        </button>
+                                    <div class="row text-center col-md-6">
+                                        <div class="col-md-9 myTotalCart">
+                                            <h4 class="text-right">Total : <strong> 
+                                                <% let formating=Intl.NumberFormat('en-US') %>
+                                                <%= formating.format(cart[0].totalPrice)+" DA" %>
+                                            </strong></h4>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <button type="button" class="btn btn-success btn-block myBtnValid">
+                                                Valider
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
