--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -126,8 +126,7 @@
 													<h5 id="totalCart_drop"></h5>
 												</div>
 												<div class="cart-btns">
-													<a href="/cart">Voir panier</a>
-													<a style="cursor: pointer;" class="myBtnValid_drop">Valider  <i class="fa fa-arrow-circle-right"></i></a>
+													<a href="/cart" style="width: 100%;">Voir panier</a>
 												</div>
 											</div>
 										</div>
