add export excel

--- a/generateApp/admin_app/views/layouts/footer.ejs
+++ b/generateApp/admin_app/views/layouts/footer.ejs
@@ -32,6 +32,9 @@
         <script src="/assets/vendor/chart.js/chart.min.js"></script>
         <script src="/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
         <script src="/assets/vendor/datatables/js/dataTables.bootstrap5.min.js"></script>
+        <script src="/assets/vendor/datatables/js/datatable.buttons.min.js"></script>
+        <script src="/assets/vendor/datatables/js/jszip.min.js"></script>
+        <script src="/assets/vendor/datatables/js/datatable.buttons.html5.min.js"></script>
         <script src="/assets/vendor/nouislider/nouislider.min.js"></script>
         <script src="/assets/vendor/fullcalendar/main.min.js"></script>
         <script src="/assets/js/stroyka.js"></script>
@@ -39,6 +42,7 @@
         <script src="/assets/js/calendar.js"></script>
         <script src="/assets/js/demo.js"></script>
         <script src="/assets/js/demo-chart-js.js"></script>
+
     </body>
     <!-- Mirrored from stroyka-admin.html.themeforest.scompiler.ru/variants/ltr/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 Apr 2023 11:41:32 GMT -->
     
