--- a/generateApp/admin_app/views/layouts/header.ejs
+++ b/generateApp/admin_app/views/layouts/header.ejs
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/assets/vendor/nouislider/nouislider.min.css" />
   <link rel="stylesheet" href="/assets/vendor/fullcalendar/main.min.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <style>.dt-buttons{display: flex; justify-content: flex-end; align-items: center; padding: 10px;}</style>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
